@@ -12,14 +12,12 @@ import src.main.scala.licenses.{
   DistributionDescription,
   SBTDistributionComponent
 }
-import sbt.librarymanagement.DependencyFilter
 
 // This import is unnecessary, but bit adds a proper code completion features
 // to IntelliJ.
 import JPMSPlugin.autoImport.*
 
 import java.io.File
-import scala.collection.mutable.ListBuffer
 
 // ============================================================================
 // === Global Configuration ===================================================
@@ -1687,15 +1685,88 @@ lazy val runtime = (project in file("engine/runtime"))
       .dependsOn(`std-aws` / Compile / packageBin)
       .value
   )
+  /** Benchmark settings */
   .settings(
+    inConfig(Benchmark)(Defaults.testSettings),
+    Benchmark / fork := true,
+    Benchmark / parallelExecution := false,
+    (Benchmark / modulePath) := {
+      val requiredModIds = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
+        "org.slf4j" % "slf4j-api" % slf4jVersion,
+        "org.slf4j" % "slf4j-nop" % slf4jVersion
+      )
+      val requiredMods = JPMSUtils.filterModulesFromUpdate(
+        (Benchmark / update).value,
+        requiredModIds,
+        streams.value.log,
+        shouldContainAll = true
+      )
+      val runtimeMod =
+        (`runtime-fat-jar` / Compile / exportedProducts).value.head.data
+      requiredMods ++ Seq(runtimeMod)
+    },
+    (Benchmark / addModules) := Seq(
+      (`runtime-fat-jar` / javaModuleName).value
+    ),
+    (Benchmark / addReads) := Map(
+      (`runtime-fat-jar` / javaModuleName).value -> Seq("ALL-UNNAMED")
+    ),
+    (Benchmark / patchModules) := {
+      val modulesToPatchIntoRuntime: Seq[File] =
+        (LocalProject(
+          "runtime-instrument-common"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-id-execution"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-repl-debugger"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-runtime-server"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-language-epb"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-compiler"
+        ) / Compile / productDirectories).value
+      Map(
+        (`runtime-fat-jar` / javaModuleName).value -> modulesToPatchIntoRuntime
+      )
+    },
+    // Reset javacOptions and javaOptions - do not inherit them from the Test scope
+    (Benchmark / javacOptions) := (Compile / javacOptions).value,
+    (Benchmark / javaOptions) := (Compile / javaOptions).value,
+    (Benchmark / javacOptions) ++= {
+      JPMSPlugin.constructOptions(
+        streams.value.log,
+        modulePath = (Benchmark / modulePath).value,
+        addModules = (Benchmark / addModules).value
+      )
+    },
+    (Benchmark / javaOptions) ++= {
+      JPMSPlugin.constructOptions(
+        streams.value.log,
+        (Benchmark / modulePath).value,
+        (Benchmark / addModules).value,
+        (Benchmark / patchModules).value,
+        (Benchmark / addExports).value,
+        (Benchmark / addReads).value
+      )
+    },
+    (Benchmark / javaOptions) ++= benchOnlyOptions,
+    // Override test log provider and its resource
+    (Benchmark / javaOptions) ++= Seq(
+      "-Dslf4j.provider=org.enso.logger.TestLogProvider",
+      "-Dconfig.resource=application-bench.conf"
+    ),
+    (Benchmark / compile) := (Benchmark / compile)
+      .dependsOn(`runtime-fat-jar` / Compile / compileModuleInfo)
+      .value,
     bench := (Benchmark / test)
       .tag(Exclusive)
-      .dependsOn(
-        // runtime.jar fat jar needs to be assembled as it is used in the
-        // benchmarks. This dependency is here so that `runtime/bench` works
-        // after clean build.
-        LocalProject("runtime-fat-jar") / assembly
-      )
+      .dependsOn(Benchmark / compile)
       .value,
     benchOnly := Def.inputTaskDyn {
       import complete.Parsers.spaceDelimited
@@ -1707,20 +1778,6 @@ lazy val runtime = (project in file("engine/runtime"))
         (Benchmark / testOnly).toTask(" -- -z " + name).value
       }
     }.evaluated
-  )
-  /** Benchmark settings */
-  .settings(
-    inConfig(Benchmark)(Defaults.testSettings),
-    Benchmark / javacOptions --= Seq(
-      "-source",
-      frgaalSourceLevel,
-      "--enable-preview"
-    ),
-    (Benchmark / javaOptions) :=
-      (LocalProject("std-benchmarks") / Benchmark / run / javaOptions).value,
-    (Benchmark / javaOptions) ++= benchOnlyOptions,
-    Benchmark / fork := true,
-    Benchmark / parallelExecution := false
   )
   .dependsOn(`common-polyglot-core-utils`)
   .dependsOn(`edition-updater`)
